# Truckplatooning

./: README.md  Untitled Diagram.drawio
code/: CMakeLists.txt  main.cpp
code/Client/: Client.cpp  Client.h
code/Server/: Server.cpp  Server.h
code/Truck/: Truck.cpp  Truck.cu  Truck.cuh  Truck.h
code/Truck/FollowerTruck/: FollowerTruck.cpp  FollowerTruck.h
code/Truck/LeaderTruck/: LeaderTruck.cpp  LeaderTruck.h
ea/: Activity Diagrams.eapx  Requirement Diagram.eapx  State Machine Diagram.eapx
